# functonal-media-server-backend

./: .env.example  .gitignore  README.md  flake.nix  jellyfin-hs.cabal
src/: Api.hs  Database.hs  Main.hs  Server.hs  Types.hs
src/Media/: FFmpeg.hs  Scanner.hs
